ClusterServerParameterRefresher deletes old parameters when not updated

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Security 2022-12-12, Security 2022-12-26, Security 2023-01-09, Security 2023-01-23, Security 2023-02-06
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      After changes made to accommodate having a minimum FCV for cluster parameters, ClusterServerParameterRefresher was erroneously changed such that if a parameter has not been updated since the last refresh, that parameter's value will be deleted locally on mongos, causing it to be set to default. This happened to only cause a bug in macOS, probably since all other variants were fast enough that the refresher never ran.

            Assignee:
            Gabriel Marks
            Reporter:
            Gabriel Marks
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: