SERVER-71767 In ClusterServerParameterRefresher, don't delete non-updated parameters