src/mongo/db/commands/set_cluster_parameter_invocation.cpp
@@ -48,19 +48,16 @@ namespace mongo {
 bool SetClusterParameterInvocation::invoke(OperationContext* opCtx,
                                            const SetClusterParameter& cmd,
                                            boost::optional<Timestamp> paramTime,
-                                           const WriteConcernOptions& writeConcern) {
+                                           const WriteConcernOptions& writeConcern,
+                                           bool ignoreIsEnabled) {
 
     BSONObj cmdParamObj = cmd.getCommandParameter();
     StringData parameterName = cmdParamObj.firstElement().fieldName();
     ServerParameter* serverParameter = _sps->get(parameterName);
     auto tenantId = cmd.getDbName().tenantId();
 
-    uassert(ErrorCodes::BadValue,
-            str::stream() << "Server parameter: '" << serverParameter->name() << "' is disabled",
-            serverParameter->isEnabled());
-
-    auto [query, update] =
-        normalizeParameter(opCtx, cmdParamObj, paramTime, serverParameter, parameterName, tenantId);
+    auto [query, update] = normalizeParameter(
+        opCtx, cmdParamObj, paramTime, serverParameter, parameterName, tenantId, ignoreIsEnabled);
 
     BSONObjBuilder oldValueBob;
     serverParameter->append(opCtx, &oldValueBob, parameterName.toString(), tenantId);
@@ -79,7 +76,8 @@ std::pair<BSONObj, BSONObj> SetClusterParameterInvocation::normalizeParameter(
     const boost::optional<Timestamp>& paramTime,
     ServerParameter* sp,
     StringData parameterName,
-    const boost::optional<TenantId>& tenantId) {
+    const boost::optional<TenantId>& tenantId,
+    bool ignoreIsEnabled) {
     BSONElement commandElement = cmdParamObj.firstElement();
     uassert(ErrorCodes::IllegalOperation,
             "Cluster parameter value must be an object",
@@ -87,7 +85,7 @@ std::pair<BSONObj, BSONObj> SetClusterParameterInvocation::normalizeParameter(
 
     uassert(ErrorCodes::IllegalOperation,
             str::stream() << "Server parameter: '" << sp->name() << "' is disabled",
-            sp->isEnabled());
+            ignoreIsEnabled || sp->isEnabled());
 
     Timestamp clusterTime = paramTime ? *paramTime : _dbService.getUpdateClusterTime(opCtx);
 
